# mycellium.eu

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.registry  LICENSE  README.md  SERVERLESS.md  TESTING.md  TODO.md  deny.toml
.cargo/: audit.toml
.github/workflows/: android.yml  apple.yml  browser.yml  ci.yml  desktop.yml
clients/android/: .gitignore  README.md  build-rust.sh  build.gradle.kts  gradle.properties  (+1 more)
clients/rust/: Cargo.toml  README.md
clients/rust/e2e/: README.md  browser.test.mjs  http-limits.test.mjs  load.test.mjs  package-lock.json  package.json  pwa.test.mjs  wasm-group.test.mjs  wasm-message.test.mjs  wasm-multidevice.test.mjs  wasm-net.test.mjs  wasm-seal.test.mjs  wasm-store.test.mjs  wasm.test.mjs
clients/rust/src/: api.rs  main.rs  web.rs
clients/rust/web/: app.js  index.html  manifest.webmanifest  styles.css  sw.js
crates/messe-cli/: Cargo.toml
crates/messe-cli/src/: blocklist.rs  client.rs  contacts.rs  draft.rs  expiry.rs  filestore.rs  groups.rs  history.rs  libp2p_net.rs  link.rs  main.rs  net.rs  platform.rs  store.rs  tui.rs
crates/messe-cli/tests/: e2e.rs
crates/messe-core/: Cargo.toml
crates/messe-core/src/: cipher.rs  error.rs  group.rs  identity.rs  lib.rs  platform.rs  ratchet.rs  safety.rs  transport.rs  wire.rs  x3dh.rs
crates/messe-core/tests/: model.rs  robustness.rs
crates/messe-directory/: Cargo.toml
crates/messe-directory/src/: http.rs  lib.rs  main.rs
crates/messe-directory/tests/: http.rs
crates/mycellium-app/: Cargo.toml
crates/mycellium-app/src/: config.rs  contacts.rs  lib.rs  names.rs  nip05.rs  pairing.rs  store.rs
crates/mycellium-app/tests/: e2e.rs  live_trust.rs  migration.rs  nip05.rs  pairing.rs  removal.rs
crates/mycellium-cli/: Cargo.toml  README.md
crates/mycellium-cli/src/: client.rs  draft.rs  expiry.rs  groups.rs  history.rs  link.rs  main.rs  platform.rs  store.rs  tui.rs
crates/mycellium-cli/src/app/: backup.rs  mod.rs  session.rs  util.rs
crates/mycellium-cli/tests/: e2e.rs
crates/mycellium-client/: Cargo.toml  README.md
crates/mycellium-client/src/: lib.rs  registry.rs  runtime.rs
crates/mycellium-core/: Cargo.toml  README.md
crates/mycellium-core/src/: card.rs  cipher.rs  delivery.rs  error.rs  group.rs  http.rs  identity.rs  lib.rs  login.rs  message.rs  offline.rs  one_shot.rs  pairing.rs  platform.rs  ratchet.rs  record.rs  rendezvous.rs  safety.rs  shamir.rs  storage.rs  transport.rs  userid.rs  wire.rs  x3dh.rs
crates/mycellium-core/tests/: model.rs  robustness.rs
crates/mycellium-desktop/: Cargo.toml
crates/mycellium-desktop/src/: engine.rs  lib.rs  main.rs  ui.rs
crates/mycellium-desktop/tests/: controller.rs
crates/mycellium-directory/: Cargo.toml  README.md
crates/mycellium-directory-client/: Cargo.toml  README.md
crates/mycellium-directory-client/src/: lib.rs
crates/mycellium-directory/src/: http.rs  lib.rs  mailer.rs  main.rs  persist.rs
crates/mycellium-directory/tests/: http.rs
crates/mycellium-engine/: Cargo.toml  README.md
crates/mycellium-engine/src/: antirollback.rs  app.rs  attachments.rs  blocklist.rs  contacts.rs  draft.rs  expiry.rs  groups.rs  history.rs  inbound.rs  inbox.rs  lib.rs  names.rs  outbox.rs  peerbook.rs  platform.rs  privacy.rs  reachability.rs  verified.rs  wireops.rs
crates/mycellium-engine/src/app/: backup.rs  devices.rs  directory_ops.rs  grouping.rs  messaging.rs  mod.rs  organize.rs  pairing.rs  session.rs  util.rs
crates/mycellium-engine/src/flow/: mod.rs
crates/mycellium-engine/tests/: failover.rs
crates/mycellium-http/: Cargo.toml  README.md
crates/mycellium-http/src/: lib.rs
crates/mycellium-linux/: Cargo.toml  README.md
crates/mycellium-linux/src/: main.rs
crates/mycellium-mls/: Cargo.toml
crates/mycellium-mls/src/: lib.rs
crates/mycellium-mls/tests/: roundtrip.rs
crates/mycellium-mobile/: Cargo.toml  README.md
crates/mycellium-mobile/src/: lib.rs
crates/mycellium-multidevice/: Cargo.toml
crates/mycellium-multidevice/src/: device_list.rs  lib.rs  migration.rs
crates/mycellium-multidevice/tests/: multidevice.rs
crates/mycellium-names/: Cargo.toml
crates/mycellium-names/src/: auth.rs  lib.rs  main.rs  policy.rs  registry.rs
crates/mycellium-names/tests/: service.rs
crates/mycellium-nostr/: Cargo.toml
crates/mycellium-nostr/src/: lib.rs
crates/mycellium-nostr/tests/: relay_roundtrip.rs
crates/mycellium-observe/: Cargo.toml  README.md
crates/mycellium-observe/src/: lib.rs
crates/mycellium-queue/: Cargo.toml  README.md
crates/mycellium-queue-client/: Cargo.toml  README.md
crates/mycellium-queue-client/src/: lib.rs
crates/mycellium-queue/src/: lib.rs  main.rs  native_push.rs  persist.rs  push.rs
crates/mycellium-registry/: Cargo.toml  README.md
crates/mycellium-registry/src/: email.rs  http.rs  lib.rs  main.rs  recovery.rs  redb_store.rs  rendezvous.rs
crates/mycellium-registry/tests/: mobile_full_stack.rs  registry_persistence.rs
crates/mycellium-registry/tests/support/: mod.rs
crates/mycellium-relay/: Cargo.toml  README.md
crates/mycellium-relay/src/: main.rs
crates/mycellium-sdk/: Cargo.toml  README.md
crates/mycellium-sdk/bindings/: .gitignore  generate.sh
crates/mycellium-sdk/src/: client.rs  lib.rs  secrets.rs  types.rs
crates/mycellium-sdk/tests/: import_identity.rs  observer_roundtrip.rs  sdk.rs
crates/mycellium-serve/: Cargo.toml  README.md
crates/mycellium-serve/src/: lib.rs
crates/mycellium-server/: Cargo.toml  README.md
crates/mycellium-server/src/: main.rs
crates/mycellium-storage/: Cargo.toml  README.md
crates/mycellium-storage/src/: filestore.rs  lib.rs  seal.rs  store.rs
crates/mycellium-transport/: Cargo.toml  README.md
crates/mycellium-transport/src/: lib.rs  libp2p_net.rs  link.rs  net.rs  reticulum_net.rs
docs/: ARCHITECTURE.md  AUDIT-BRIEF.md  BROWSER.md  CONCEPT.md  CONTRIBUTING.md  DEPLOY.md  GO-LIVE.md  IMPROVEMENTS.md  NATIVE-CLIENTS.md  PRIVACY-MODES.md  PRODUCTION-READINESS.md  QUICKSTART.md  SECURITY.md  SERVERLESS-ARCHITECTURE.md
scripts/: check-registry-audit-reachability.sh
(+83 files in other folders)
