[workspace]
resolver = "2"
members = [
    "crates/mycellium-mls",
    "crates/mycellium-nostr",
    "crates/mycellium-multidevice",
    "crates/mycellium-app",
    "crates/mycellium-cli",
]

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Mycellium Team"]
rust-version = "1.96"
repository = "https://github.com/aristath/mycellium.eu"

# The workspace is a messenger stack over MLS-over-Nostr (Marmot): the mls /
# nostr / multidevice / app engine crates plus the CLI. These are I/O- and
# crypto-bound native binaries, so optimise release builds for speed.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
