[package]
name = "mycellium-client"
version = "0.0.0"
description = "A local Rust app that embeds a web server and serves a browser PWA over the Mycellium engine"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[[bin]]
name = "mycellium-client"
path = "src/main.rs"

[dependencies]
mycellium-core = { path = "../../crates/mycellium-core" }
mycellium-engine = { path = "../../crates/mycellium-engine" }
mycellium-storage = { path = "../../crates/mycellium-storage" }
mycellium-directory-client = { path = "../../crates/mycellium-directory-client" }
mycellium-queue-client = { path = "../../crates/mycellium-queue-client" }
tiny_http = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
getrandom = "0.2"
base64 = "0.22"

[lints.rust]
unsafe_code = "forbid"
