[package]
name = "messe-core"
version = "0.0.0"
description = "Portable, no_std-capable core of the Messe protocol"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
# `std` is on by default for rich platforms (desktop/mobile). Turn it off to
# build the core for a `no_std` target (ESP32 / Cortex-M). See Layer 10.
default = ["std"]
std = [
    "bip39/std",
    "k256/std",
    "ed25519-dalek/std",
    "sha2/std",
    "hkdf/std",
    "hmac/std",
    "chacha20poly1305/std",
    "zeroize/std",
    "serde/std",
    "postcard/use-std",
    "bip32/std",
]

[dependencies]
# Seed phrases (Layer 9). Entropy is supplied by the host `Platform`, so no RNG
# dependency is pulled in here.
bip39 = { version = "2", default-features = false, features = ["alloc"] }
# secp256k1 wallet key — root identity, SIWE, record signatures.
k256 = { version = "0.13", default-features = false, features = ["ecdsa", "arithmetic"] }
# BIP-32/44 HD derivation of the wallet key (external-wallet interop).
bip32 = { version = "0.5", default-features = false, features = ["alloc", "secp256k1"] }
# Ed25519 device key — basis of the libp2p PeerId / transport.
ed25519-dalek = { version = "2", default-features = false }
# X25519 messaging key — X3DH.
x25519-dalek = { version = "2", default-features = false, features = ["static_secrets"] }
# HKDF-SHA512 domain-separated key derivation from the BIP-39 seed.
sha2 = { version = "0.10", default-features = false }
hkdf = { version = "0.12", default-features = false }
hmac = { version = "0.12", default-features = false }
# AEAD for the Double Ratchet message keys.
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
zeroize = { version = "1", default-features = false, features = ["alloc"] }
# Wire encoding: serde types, postcard for compact deterministic bytes.
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
postcard = { version = "1", default-features = false, features = ["alloc"] }
serde-big-array = "0.5"

[lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"
