[package]
name = "mycellium-app"
version = "0.0.0"
description = "Headless messenger engine over MLS-over-Nostr (Marmot): accounts, contacts + key-change hardening, conversations, persisted history — the app layer that turns the mls/nostr/multidevice primitives into a messenger core"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# The three proven primitives this engine orchestrates.
mycellium-mls = { path = "../mycellium-mls" }
mycellium-nostr = { path = "../mycellium-nostr" }
mycellium-multidevice = { path = "../mycellium-multidevice" }

# Durable MLS state: swap the memory provider for a real SQLCipher-encrypted
# store. Same MDK 0.8 line as mycellium-mls so the `MdkStorageProvider` impls
# unify. `bundled-sqlcipher` (via rusqlite) means no system SQLite dependency.
mdk-sqlite-storage = "0.8.0"

# App-side durable state (contacts, trust pins, transcripts) — one encrypted
# SQLite db, separate from the MLS state db. Same rusqlite feature as
# mdk-sqlite-storage so libsqlite3-sys unifies to one bundled SQLCipher build.
rusqlite = { version = "0.37", features = ["bundled-sqlcipher"] }

# The `nostr` primitives (keys, pubkeys) the API speaks. PINNED to the 0.44 line
# to match MDK 0.8's re-exports — see mycellium-mls's alpha note.
nostr = { version = "0.44.4", features = ["std", "nip44", "nip59"] }
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }

# Deterministic key-derivation for the two at-rest DB keys from the device seed.
sha2 = "0.10"

tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# rust-nostr's in-process relay: the acceptance test traverses a genuine relay
# socket rather than handing events between devices directly.
nostr-relay-builder = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
