[package]
name = "mycellium-cli"
version = "0.0.0"
description = "Hard-serverless Mycellium peer shell (CLI)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
mycellium-core = { path = "../mycellium-core" }
mycellium-transport = { path = "../mycellium-transport" }
mycellium-storage = { path = "../mycellium-storage" }
mycellium-engine = { path = "../mycellium-engine" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
getrandom = "0.2"

[lints.rust]
unsafe_code = "forbid"
