[package]
name = "mycellium-client"
version = "0.0.0"
description = "Headless Mycellium client API"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
mycellium-core = { path = "../mycellium-core" }
mycellium-engine = { path = "../mycellium-engine" }
anyhow = "1"

[lints.rust]
unsafe_code = "forbid"
