[package]
name = "mycellium-directory-client"
version = "0.0.0"
description = "Client of the Mycellium directory contract (login, publish, lookup, mailbox, presence)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
mycellium-core = { path = "../mycellium-core" }
mycellium-http = { path = "../mycellium-http", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["native"]
# Native HTTP via ureq + the built-in `new()` constructor. Turn off (and inject
# a transport via `with_transport`) for wasm32 builds.
native = ["dep:mycellium-http"]

[lints.rust]
unsafe_code = "forbid"
