[package]
name = "mycellium-directory"
version = "0.0.0"
description = "The Mycellium directory logic (library): signed-record store, login, rendezvous"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mycellium-core = { path = "../mycellium-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = { version = "0.12", features = ["ssl-rustls"] }
getrandom = "0.2"
sha2 = "0.10"
redb = "2"
mycellium-observe = { path = "../mycellium-observe" }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }

[lints.rust]
unsafe_code = "forbid"
