[package]
name = "mycellium-directory"
version = "0.0.0"
description = "The Mycellium directory logic (library): signed-record store, login, rendezvous"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
mycellium-core = { path = "../mycellium-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8"
mycellium-serve = { path = "../mycellium-serve" }
getrandom = "0.2"
sha2 = "0.10"
redb = "2"
mycellium-observe = { path = "../mycellium-observe" }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls"] }
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
ureq = { version = "2", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "forbid"
