[package]
name = "mycellium-engine"
version = "0.0.0"
description = "The headless hard-serverless Mycellium peer"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[features]
default = ["native"]
# Native orchestration: filesystem storage, OS clock/RNG, and P2P transport.
native = [
    "dep:mycellium-transport",
    "dep:mycellium-storage",
    "dep:getrandom",
]

[dependencies]
rpassword = "7"
mycellium-core = { path = "../mycellium-core" }
mycellium-transport = { path = "../mycellium-transport", optional = true }
mycellium-storage = { path = "../mycellium-storage", optional = true }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
getrandom = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[lints.rust]
unsafe_code = "forbid"
