[package]
name = "mycellium-engine"
version = "0.0.0"
description = "The headless hard-serverless Mycellium peer"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
mycellium-core = { path = "../mycellium-core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
getrandom = "0.2"

[lints.rust]
unsafe_code = "forbid"
