[package]
name = "mycellium-linux"
version = "0.0.0"
description = "Native Linux Mycellium client"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1"
eframe = { version = "0.35.0", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
getrandom = "0.2"
mycellium-client = { path = "../mycellium-client" }
mycellium-core = { path = "../mycellium-core" }
mycellium-engine = { path = "../mycellium-engine" }
mycellium-storage = { path = "../mycellium-storage" }
mycellium-transport = { path = "../mycellium-transport" }
zeroize = "1"

[lints.rust]
unsafe_code = "forbid"
