[package]
name = "mycellium-multidevice"
version = "0.0.0"
description = "Multi-device accounts over MLS-over-Nostr (Marmot): one logical account whose many device-leaves all participate in every group"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
# The MLS crypto + Marmot event-building layer (phase 1).
mycellium-mls = { path = "../mycellium-mls" }
# The relay transport (phase 2): connect / publish / subscribe / fetch.
mycellium-nostr = { path = "../mycellium-nostr" }
# The `nostr` primitives we build the device-list event with. PINNED to the
# 0.44 line to match MDK 0.8's re-exports — see mycellium-mls's alpha note.
nostr = { version = "0.44.4", features = ["std", "nip44", "nip59"] }
# nostr-sdk supplies the `Client`/`Filter` types the transport exposes so we can
# run the device-list fetch query through its `client()` escape hatch.
nostr-sdk = { version = "0.44", default-features = false, features = ["nip44", "nip59"] }
tokio = { version = "1", features = ["rt", "macros", "sync", "time"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
# rust-nostr's in-process relay: the acceptance test traverses a genuine relay
# socket rather than handing events between devices directly.
nostr-relay-builder = "0.44"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[lints.rust]
unsafe_code = "forbid"
