[package]
name = "mycellium-names"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

# The `@mycellium.eu` NIP-05 name service: a small signed-name registry that
# serves `/.well-known/nostr.json` and lets users self-register a `name@domain`
# → npub binding, authenticated with NIP-98 (proving control of the key).

[[bin]]
name = "mycellium-names"
path = "src/main.rs"

[dependencies]
nostr = { version = "0.44.4", default-features = false, features = ["std", "nip98"] }
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
anyhow = "1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"
