[package]
name = "mycellium-queue"
version = "0.0.0"
description = "The Mycellium message queue: a per-recipient, wallet-keyed store-and-forward mailbox (decoupled from the directory)"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "mycellium-queue"
path = "src/main.rs"

[dependencies]
mycellium-core = { path = "../mycellium-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = { version = "0.12", features = ["ssl"] }
getrandom = "0.2"
p256 = { version = "0.13", features = ["ecdsa"] }
base64 = "0.22"
redb = "2"
mycellium-observe = { path = "../mycellium-observe" }
ureq = { version = "2", features = ["json"] }

[dev-dependencies]
ureq = { version = "2", features = ["json"] }

[lints.rust]
unsafe_code = "forbid"
