[package]
name = "mycellium-registry"
version = "0.0.0"
description = "Simple Mycellium account registry: login indexes, signed-record pointers, and encrypted account blobs"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
chacha20poly1305 = "0.10"
getrandom = "0.2"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport"] }
redb = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
ureq = { version = "3", features = ["json"] }
mycellium-core = { path = "../mycellium-core" }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
