[package]
name = "mycellium-registry"
version = "0.0.0"
description = "Simple Mycellium account registry: login indexes, signed-record pointers, and encrypted account blobs"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8"
anyhow = "1"
chacha20poly1305 = "0.10"
futures = "0.3"
getrandom = "0.2"
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "pool", "rustls-tls", "smtp-transport"] }
libp2p = { version = "0.56", default-features = false, features = ["tokio", "quic", "macros", "ed25519"] }
libp2p-stream = "0.4.0-alpha"
redb = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
ureq = { version = "3", features = ["json"] }
mycellium-core = { path = "../mycellium-core" }

[dev-dependencies]
mycellium-client = { path = "../mycellium-client" }
mycellium-mobile = { path = "../mycellium-mobile" }
mycellium-transport = { path = "../mycellium-transport" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[lints.rust]
unsafe_code = "forbid"
