[package]
name = "mycellium-serve"
version = "0.0.0"
description = "Shared production HTTP runtime for the Mycellium services: axum + hyper + tokio + rustls, with metrics, health, CORS, redacted access logs, TLS, and graceful shutdown"
edition.workspace = true
license.workspace = true
authors.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net"] }
# rustls 0.23 needs a process-default crypto provider installed before use; we
# pin the audited `ring` backend explicitly so TLS is deterministic.
rustls = { version = "0.23", default-features = false, features = ["ring"] }
mycellium-observe = { path = "../mycellium-observe" }

[lints.rust]
unsafe_code = "forbid"
